force-app/main/default/objects/Customer_Health__c/Customer_Health__c.object-meta.xml
<CustomObject>
    <description>Score de saúde do cliente calculado automaticamente com base em casos, compras, NPS e inadimplência. Alimenta análises de IA.</description>
    <label>Customer Health</label>
    <nameField>
        <label>Customer Health Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Health</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>