force-app/main/default/objects/Customer_Health__c/fields/AI_Health_Analysis__c.field-meta.xml
<CustomField>
    <fullName>AI_Health_Analysis__c</fullName>
    <label>AI Health Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>