force-app/main/default/objects/Customer_Health__c/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <label>Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crítico</fullName>
                <label>Crítico (0-30)</label>
            </value>
            <value>
                <fullName>Em Risco</fullName>
                <label>Em Risco (31-60)</label>
            </value>
            <value>
                <fullName>Saudável</fullName>
                <label>Saudável (61-80)</label>
            </value>
            <value>
                <fullName>Excelente</fullName>
                <label>Excelente (81-100)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>