force-app/main/default/objects/Customer_Health__c/fields/Last_Purchase_Days__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Days__c</fullName>
    <label>Last Purchase (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>