force-app/main/default/objects/Customer_Health__c/fields/Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Open_Cases__c</fullName>
    <label>Open Cases</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>