force-app/main/default/objects/Customer_Health__c/fields/Payment_Delays__c.field-meta.xml
<CustomField>
    <fullName>Payment_Delays__c</fullName>
    <label>Payment Delays</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>